--- a/doc/project.Rmd
+++ b/doc/project.Rmd
@@ -22,6 +22,9 @@ knitr::opts_chunk$set(echo=FALSE,
 ```
 
 ```{r runme, eval=FALSE}
+# run this line to create the PDF!
+# you might have to change the path 
+# i.e. "~/Documents/grad-school-sucks/project.Rmd"
 rmarkdown::render("doc/project.Rmd")
 ```
 
