Add another reference

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -7,4 +7,15 @@
     journal={Infection Control and Hospital Epidemiology},
     year={2011},
     pages={553-561}
+},
+
+@article{pelupessy_2002, 
+    author={Pelupessy, I. and Bonten, M. J. M. and Diekmann, O.}, 
+    title={How to assess the relative importance of different colonization routes of pathogens within hospital settings}, 
+    volume={99}, 
+    DOI={10.1073/pnas.082412899}, 
+    number={8},
+    journal={Proceedings of the National Academy of Sciences},
+    year={2002},
+    pages={5601-5605}
 }
