--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -25,5 +25,31 @@
     journal={Proceedings of the National Academy of Sciences},
     year={2002},
     pages={5601-5605}
+},
+
+@article{ngm,
+    author={Diekmann, O. and Heesterbeek, J. A. P. and Roberts, M. G.},
+    title={The construction of next-generation matrices for compartmental epidemic models},
+    volume={7},
+    DOI={10.1098/rsif.2009.0386},
+    number={47},
+    journal={Journal of The Royal Society Interface},
+    year={2009},
+    pages={873-885}
+},
+
+@Manual{rcore,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2015},
+    url = {http://www.R-project.org/},
 }
 
+@Manual{sympy,
+    title = {SymPy: Python library for symbolic mathematics},
+    author = {{SymPy Development Team}},
+    year = {2014},
+    url = {http://www.sympy.org},
+}
